# plugins-workspace

./: package.json
plugins/localhost/: Cargo.toml
plugins/localhost/src/: lib.rs
